# nuPGCM

./: .gitignore  3dbl.jl  LocalPreferences.toml  Manifest-v1.10.toml  Manifest-v1.11.toml  Manifest-v1.12.toml  Manifest.toml  NEWS.md  Project.toml  README.md  clean_sim_out.sh  convergence.jl  gpu_test.jl  mesh_bowl2D.jl  mesh_bowl2D_va.jl  mesh_bowl3D.jl  mesh_bowl3D_dm.jl  mesh_quality.jl  myJuliaLib.jl  my_julia_lib.jl  nonhydro2D.jl  nonhydro2Dinv.jl  nonhydro3D.jl  nonhydro3Dinv.jl  plots.jl  plots.mplstyle  plotsPaper1.jl  plotsPaper2.jl  plotsPaperA.jl  plotsPaperB.jl  plotsProposal.jl  plotsTalks.jl  plots_paper1.jl  plots_paper2.jl  plots_talks.jl  postprocess.jl  qg.jl  run.jl  run_goal.jl  simlog.jl
1d/: run.jl  setup.jl  tides.jl
1d_nondim/: run.jl
1dpg/: evolution.jl  inversion.jl  plotting.jl  run.jl  setup.jl  steady.jl  structs.jl  utils.jl
1dtc/: evolution.jl  plotting.jl
1dtc_pg/: evolution.jl  inversion.jl  params.jl  plotting.jl  run.jl  setup.jl  structs.jl  utils.jl
2dpg/: evolution.jl  inversion.jl  plotting.jl  run.jl  setup.jl  structs.jl  testRK.jl  utils.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Manifest.toml  Project.toml  make.jl
examples/: 1Demulator.jl  2Demulator.jl  3Devolution.jl  3Dinversion.jl  bowl.jl  bowl_mixing.jl  column1d.jl  convergence_tests.jl  ridge.jl  ridge2d.jl  run.jl  seamount2d.jl  single_column.jl  (+3 more)
postprocess/: README.md  channel2D.py  check_cfl.py  psi.py  psi2d.py  pyproject.toml  requirements.txt  slice.py  stratification.py  streamfunctions.py  utils.py
(+693 files in other folders)
