[project]
name = "postprocess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pyvista>=0.46.5",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
